--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,25 +1,1 @@
-{
-  "name": "web",
-  "private": true,
-  "version": "0.1.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@mesh/shared": "workspace:*",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "xterm": "^5.3.0",
-    "xterm-addon-fit": "^0.8.0"
-  },
-  "devDependencies": {
-    "@types/react": "^18.2.55",
-    "@types/react-dom": "^18.2.19",
-    "@vitejs/plugin-react": "^4.2.1",
-    "typescript": "^5.3.3",
-    "vite": "^5.0.8"
-  }
-}
+{"name":"web","private":true,"version":"0.1.0","type":"module","scripts":{"dev":"vite","build":"vite build","preview":"vite preview"},"dependencies":{"@mesh/shared":"file:../../packages/shared","@tailwindcss/vite":"^4.1.18","react":"^18.2.0","react-dom":"^18.2.0","tailwindcss":"^4.1.18","xterm":"^5.3.0","xterm-addon-fit":"^0.8.0"},"devDependencies":{"@types/node":"^25.2.1","@types/react":"^18.2.55","@types/react-dom":"^18.2.19","@vitejs/plugin-react":"^4.2.1","typescript":"^5.3.3","vite":"^5.0.8"}}
