--- a/package.json
+++ b/package.json
@@ -1,11 +1,17 @@
 {
   "name": "mesh-ai",
   "private": true,
-  "workspaces": ["apps/*", "packages/*"],
+  "workspaces": [
+    "apps/*",
+    "packages/*"
+  ],
   "scripts": {
-    "dev": "pnpm --filter web dev",
-    "dev:web": "pnpm --filter web dev",
+    "dev": "npm --workspace web run dev",
+    "dev:web": "npm --workspace web run dev",
     "dev:api": "echo Run backend from apps/api (see README)",
-    "build": "pnpm --filter web build"
+    "build": "npm --workspace web run build"
+  },
+  "dependencies": {
+    "@tailwindcss/vite": "^4.1.18"
   }
 }
